--- a/hvrskyworthvr/src/main/res/layout/activity_mine.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_mine.xml
@@ -62,8 +62,8 @@
         android:padding="10dp"
         android:textColor="@color/color_white"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/tv_mine_about_account"
-        app:layout_constraintTop_toBottomOf="@+id/tv_mine_about_account"
+        app:layout_constraintStart_toStartOf="@id/tv_mine_about_account"
+        app:layout_constraintTop_toBottomOf="@id/tv_mine_about_account"
         tools:text="UUID：HKSN79475H" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -74,8 +74,8 @@
         android:textColor="@color/color_333"
         android:textSize="22sp"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
+        app:layout_constraintStart_toStartOf="@id/appCompatImageView2"
+        app:layout_constraintTop_toBottomOf="@id/appCompatImageView2"
         tools:text="扫描二维码安装农家360\n随时随地免费观看 VR 视频" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -97,8 +97,8 @@
         android:text="@string/about_user_protocol"
         android:textColor="@color/color_white"
         android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="@+id/appCompatTextView11"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView11" />
+        app:layout_constraintStart_toStartOf="@id/appCompatTextView11"
+        app:layout_constraintTop_toBottomOf="@id/appCompatTextView11" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_about_privacy_protocol"
@@ -108,8 +108,8 @@
         android:text="@string/about_privacy_protocol"
         android:textColor="@color/color_white"
         android:textSize="13sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_about_user_protocol"
-        app:layout_constraintStart_toEndOf="@+id/tv_about_user_protocol" />
+        app:layout_constraintBaseline_toBaselineOf="@id/tv_about_user_protocol"
+        app:layout_constraintStart_toEndOf="@id/tv_about_user_protocol" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_about_us_protocol"
@@ -119,8 +119,8 @@
         android:text="@string/about_us_protocol"
         android:textColor="@color/color_white"
         android:textSize="13sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_about_privacy_protocol"
-        app:layout_constraintStart_toEndOf="@+id/tv_about_privacy_protocol" />
+        app:layout_constraintBaseline_toBaselineOf="@id/tv_about_privacy_protocol"
+        app:layout_constraintStart_toEndOf="@id/tv_about_privacy_protocol" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_about_check_version_code"
@@ -129,8 +129,8 @@
         android:padding="10dp"
         android:textColor="@color/color_white"
         android:textSize="13sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_about_us_protocol"
-        app:layout_constraintStart_toEndOf="@+id/tv_about_us_protocol"
+        app:layout_constraintBaseline_toBaselineOf="@id/tv_about_us_protocol"
+        app:layout_constraintStart_toEndOf="@id/tv_about_us_protocol"
         tools:text="检查新版本（V1.0.3）" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -141,8 +141,8 @@
         android:layout_marginEnd="10dp"
         android:src="@drawable/rtr_icon_check_version"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@+id/tv_about_check_version_code"
-        app:layout_constraintTop_toTopOf="@+id/tv_about_check_version_code" />
+        app:layout_constraintEnd_toEndOf="@id/tv_about_check_version_code"
+        app:layout_constraintTop_toTopOf="@id/tv_about_check_version_code" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/appCompatTextView11"
@@ -155,57 +155,19 @@
         android:textColor="@color/color_white_a60"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/tv_mine_about_uuid" />
+        app:layout_constraintStart_toStartOf="@id/tv_mine_about_uuid" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/appCompatTextView10"
+        android:id="@+id/tv_video_update_enter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="@string/video_update_button"
+        android:text="@string/video_update_get_text2"
         android:textColor="@color/color_white"
         android:textSize="13sp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView11"
-        app:layout_constraintStart_toStartOf="@+id/tv_mine_about_uuid"
-        app:layout_constraintTop_toBottomOf="@+id/tv_mine_about_uuid" />
-
-    <Switch
-        android:id="@+id/view_switch_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:checked="true"
-        android:showText="false"
-        android:thumb="@drawable/thumb_selector"
-        android:track="@drawable/track_selector_bg"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView10"
-        app:layout_constraintStart_toEndOf="@+id/appCompatTextView10"
-        app:layout_constraintTop_toTopOf="@+id/appCompatTextView10"
-        tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-    <com.chinafocus.hvrskyworthvr.ui.widget.VideoUpdateChip
-        android:id="@+id/view_chip"
-        android:layout_width="wrap_content"
-        android:layout_height="44dp"
-        android:layout_marginStart="10dp"
-        android:includeFontPadding="false"
-        android:text="@string/video_update_init_text"
-        android:textColor="@color/color_white"
-        android:textSize="10sp"
-        android:visibility="visible"
-        app:chipBackgroundColor="@color/color_video_update_ok_bg"
-        app:chipCornerRadius="40dp"
-        app:chipEndPadding="10dp"
-        app:chipIcon="@drawable/ic_baseline_cached_24"
-        app:chipIconSize="13dp"
-        app:chipIconVisible="true"
-        app:chipStartPadding="10dp"
-        app:iconEndPadding="-5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView10"
-        app:layout_constraintStart_toEndOf="@+id/view_switch_button"
-        app:layout_constraintTop_toTopOf="@+id/appCompatTextView10"
-        tools:ignore="SmallSp" />
+        app:layout_constraintBaseline_toBaselineOf="@id/tv_about_check_version_code"
+        app:layout_constraintStart_toEndOf="@id/tv_about_check_version_code"
+        tools:layout_editor_absoluteY="1041dp" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_setting_mdm"
