--- a/hvrskyworthvr/src/main/res/layout/rtr_dialog_video_update.xml
+++ b/hvrskyworthvr/src/main/res/layout/rtr_dialog_video_update.xml
@@ -22,7 +22,7 @@
         android:gravity="center"
         android:includeFontPadding="false"
         android:text="@string/video_update_text_close"
-        android:textColor="@color/color_white"
+        android:textColor="@color/color_setting_id"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/csl_update_running_root"
         app:layout_constraintEnd_toEndOf="@id/csl_update_running_root"
@@ -35,9 +35,10 @@
         android:layout_width="127dp"
         android:layout_height="44dp"
         android:background="@drawable/shape_check_version_cancel_bg"
+        android:stateListAnimator="@null"
         android:gravity="center"
         android:text="@string/setting_status_cancel"
-        android:textColor="@color/color_white"
+        android:textColor="@color/color_setting_id_create"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@id/csl_update_running_root"
         app:layout_constraintStart_toStartOf="@id/tv_video_update_des"
@@ -45,10 +46,12 @@
         app:layout_constraintVertical_bias="0.55" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:stateListAnimator="@null"
         android:id="@+id/bt_video_update_ok"
         android:layout_width="127dp"
         android:layout_height="44dp"
         android:background="@drawable/shape_check_version_pause_bg"
+        android:elevation="0dp"
         android:gravity="center"
         android:text="@string/video_update_button_close"
         android:textColor="@color/color_white"
