--- a/hvrskyworthvr/src/main/res/layout/view_video_update_status.xml
+++ b/hvrskyworthvr/src/main/res/layout/view_video_update_status.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -104,11 +105,11 @@
         android:layout_marginTop="30dp"
         android:includeFontPadding="false"
         android:padding="10dp"
-        android:text="下载完成（3/3）"
         android:textColor="@color/color_black"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="下载完成（3/3）" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_video_update_list"
