--- a/hvrskyworthvr/src/main/res/layout/item_video_update.xml
+++ b/hvrskyworthvr/src/main/res/layout/item_video_update.xml
@@ -18,6 +18,21 @@
         app:round="3dp"
         tools:src="#f00" />
 
+    <com.chinafocus.hvrskyworthvr.util.widget.VideoUpdateTypeView
+        android:id="@+id/view_video_update_type"
+        android:layout_width="29dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="7dp"
+        android:gravity="center"
+        android:includeFontPadding="false"
+        android:textColor="@color/color_white"
+        android:textSize="8sp"
+        app:layout_constraintStart_toStartOf="@id/iv_video_update_image_url"
+        app:layout_constraintTop_toTopOf="@id/iv_video_update_image_url"
+        tools:ignore="SmallSp"
+        tools:text="预览" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_video_update_title"
         android:layout_width="0dp"
@@ -57,12 +72,12 @@
         android:id="@+id/tv_video_update_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3：56"
         android:textColor="@color/color_setting_id_create"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@id/iv_video_update_image_url"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="SmallSp" />
+        tools:ignore="SmallSp"
+        tools:text="3：56" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
