--- a/hvrskyworthvr/src/main/res/layout/view_video_update_status.xml
+++ b/hvrskyworthvr/src/main/res/layout/view_video_update_status.xml
@@ -115,6 +115,9 @@
         android:id="@+id/rv_video_update_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:overScrollMode="never"
+        android:paddingBottom="10dp"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
