--- a/hvrskyworthvr/src/main/res/drawable/shape_video_update_cancel_bg.xml
+++ b/hvrskyworthvr/src/main/res/drawable/shape_video_update_cancel_bg.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/color_setting_id" />
+    <solid android:color="@color/color_white" />
     <corners android:radius="6dp" />
+    <stroke
+        android:width="1px"
+        android:color="@color/color_setting_status_gray" />
 </shape>
