--- a/hvrskyworthvr/src/main/res/layout/activity_show.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_show.xml
@@ -36,16 +36,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.455" />
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/iv_main_logo"
-        android:layout_width="92dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="32dp"
-        android:src="@drawable/rtr_main_logo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <View
         android:id="@+id/view_divider_line"
         android:layout_width="1dp"
@@ -86,13 +76,6 @@
         tools:text="《皆山园图卷》由清代著名画家王原祁、王敬铭所作。青山蔼蔼，碧水粼粼，飞瀑直泄，鸟儿欢鸣，行人穿梭其中，悠然自得，仿若世外桃源。全景版《皆山园图卷》由荣宝斋...版社与中图云创联合打造，运用5G+VR技术，让观者穿越时空，在虚拟实境中，置身“可行、可望、可游、可居”的中国山水画作，感受“有声、有色、有全景”的超高清沉浸式视听体验。" />
 
     <View
-        android:id="@+id/iv_mine_about"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
         android:id="@+id/cover"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -103,5 +86,39 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/cover_no_data"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/color_no_data"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:text="@string/video_list_no_data"
+        android:textColor="@color/color_setting_status_gray"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_main_logo"
+        android:layout_width="92dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/rtr_main_logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/iv_mine_about"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
