时间设置UI完成

--- a/hvrskyworthvr/src/main/res/values/colors.xml
+++ b/hvrskyworthvr/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="color_white_a80">#CCFFFFFF</color>
     <color name="color_black">#000000</color>
     <color name="color_F6">#F6F6F6</color>
+    <color name="color_EE">#EEEEEE</color>
 
     <color name="color_black_a10">#1A000000</color>
     <color name="color_black_a20">#33000000</color>
@@ -66,5 +67,7 @@
     <color name="color_video_update_error_bg">#FFF65A56</color>
     <color name="color_video_update_icon_enable_bg">#FF1EBE83</color>
     <color name="color_video_update_icon_disable_bg">#FFDADADD</color>
+
+    <color name="color_video_update_time_task_text">#C8C9CC</color>
 
 </resources>
