--- a/hvrskyworthvr/src/main/res/layout/activity_video_update_manager.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_video_update_manager.xml
@@ -52,6 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="46dp"
         android:text="@string/video_update_time_text"
+        android:visibility="invisible"
         android:textColor="@color/color_setting_id"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@id/appCompatTextView10"
