--- a/hvrskyworthvr/src/main/res/layout/activity_mine.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_mine.xml
@@ -166,7 +166,7 @@
         android:text="@string/video_update_get_text2"
         android:textColor="@color/color_white"
         android:textSize="13sp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBaseline_toBaselineOf="@id/tv_about_check_version_code"
         app:layout_constraintStart_toEndOf="@id/tv_about_check_version_code"
         tools:layout_editor_absoluteY="1041dp" />
