--- a/hvrskyworthvr/src/main/res/layout/activity_video_play_count.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_video_play_count.xml
@@ -61,6 +61,7 @@
         android:background="@drawable/shape_video_update_cancel_bg"
         android:gravity="center"
         android:text="@string/video_play_count_text3"
+        android:visibility="invisible"
         android:textColor="@color/color_setting_id_create"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@id/appCompatTextView16"
