--- a/hvrskyworthvr/src/main/res/layout/rtr_dialog_media_setting.xml
+++ b/hvrskyworthvr/src/main/res/layout/rtr_dialog_media_setting.xml
@@ -31,7 +31,7 @@
         android:id="@+id/appCompatImageView10"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="29dp"
         android:padding="5dp"
         android:src="@drawable/rtr_icon_video_setting_volume"
@@ -72,10 +72,10 @@
         app:layout_constraintTop_toBottomOf="@+id/appCompatImageView11" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/appCompatImageButton"
+        android:id="@+id/ib_click_volume_down"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="30dp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:padding="5dp"
         android:src="@drawable/rtr_icon_video_setting_volume_down"
@@ -84,68 +84,74 @@
         app:layout_constraintTop_toTopOf="@+id/appCompatImageView10" />
 
     <androidx.appcompat.widget.AppCompatSeekBar
-        android:id="@+id/appCompatSeekBar"
-        android:layout_width="300dp"
+        android:id="@+id/sb_volume"
+        android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:maxHeight="5dp"
         android:minHeight="5dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:progressDrawable="@drawable/seekbar_light"
         android:thumb="@drawable/rtr_icon_video_setting_bar"
-        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageButton"
-        app:layout_constraintStart_toEndOf="@+id/appCompatImageButton"
-        app:layout_constraintTop_toTopOf="@+id/appCompatImageButton" />
+        app:layout_constraintBottom_toBottomOf="@+id/ib_click_volume_down"
+        app:layout_constraintEnd_toStartOf="@+id/ib_click_volume_up"
+        app:layout_constraintStart_toEndOf="@+id/ib_click_volume_down"
+        app:layout_constraintTop_toTopOf="@+id/ib_click_volume_down" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/appCompatImageView13"
+        android:id="@+id/ib_click_volume_up"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginStart="12dp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:padding="5dp"
         android:src="@drawable/rtr_icon_video_setting_volume_up"
-        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageButton"
-        app:layout_constraintStart_toEndOf="@+id/appCompatSeekBar"
-        app:layout_constraintTop_toTopOf="@+id/appCompatImageButton" />
+        app:layout_constraintBottom_toBottomOf="@+id/ib_click_volume_down"
+        app:layout_constraintEnd_toEndOf="@+id/imageFilterView"
+        android:layout_marginEnd="60dp"
+        app:layout_constraintTop_toTopOf="@+id/ib_click_volume_down" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/appCompatImageView12"
+        android:id="@+id/ib_click_brightness_down"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:padding="5dp"
         android:src="@drawable/rtr_icon_video_setting_brightness_down"
         app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView11"
-        app:layout_constraintEnd_toEndOf="@+id/appCompatImageButton"
-        app:layout_constraintStart_toStartOf="@+id/appCompatImageButton"
+        app:layout_constraintEnd_toEndOf="@+id/ib_click_volume_down"
+        app:layout_constraintStart_toStartOf="@+id/ib_click_volume_down"
         app:layout_constraintTop_toTopOf="@+id/appCompatImageView11" />
 
     <androidx.appcompat.widget.AppCompatSeekBar
-        android:id="@+id/appCompatSeekBar2"
-        android:layout_width="300dp"
+        android:id="@+id/sb_brightness"
+        android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:maxHeight="5dp"
         android:minHeight="5dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:progressDrawable="@drawable/seekbar_light"
         android:thumb="@drawable/rtr_icon_video_setting_bar"
-        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView12"
-        app:layout_constraintStart_toEndOf="@+id/appCompatImageView12"
-        app:layout_constraintTop_toTopOf="@+id/appCompatImageView12" />
+        app:layout_constraintBottom_toBottomOf="@+id/ib_click_brightness_down"
+        app:layout_constraintEnd_toStartOf="@+id/ib_click_brightness_up"
+        app:layout_constraintStart_toEndOf="@+id/ib_click_brightness_down"
+        app:layout_constraintTop_toTopOf="@+id/ib_click_brightness_down" />
 
     <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/ib_click_brightness_up"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:padding="5dp"
         android:src="@drawable/rtr_icon_video_setting_brightness_up"
-        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView12"
-        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView13"
-        app:layout_constraintStart_toStartOf="@+id/appCompatImageView13"
-        app:layout_constraintTop_toTopOf="@+id/appCompatImageView12" />
+        app:layout_constraintBottom_toBottomOf="@+id/ib_click_brightness_down"
+        app:layout_constraintEnd_toEndOf="@+id/ib_click_volume_up"
+        app:layout_constraintStart_toStartOf="@+id/ib_click_volume_up"
+        app:layout_constraintTop_toTopOf="@+id/ib_click_brightness_down" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
